# AutoNACC

./: .gitignore  Amber_NonStandard_Residue_Tutorial.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  autoprep.py  config_template.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
autoprep/: __init__.py  align.py  cli.py  normalize.py  prep.py  protonate.py
examples/: config_template.json
scripts/: normalize_pdb.py
template/: ace.xyz  nme.xyz
