[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "autoprep"
version = "0.1.0"
description = "Automated non-standard amino acid parameterization for Amber"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy"]
keywords = ["amber", "molecular-dynamics", "force-field", "parameterization", "non-standard-amino-acid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/Hsuchein/AutoNACC"
Repository = "https://github.com/Hsuchein/AutoNACC"
Issues = "https://github.com/Hsuchein/AutoNACC/issues"
Documentation = "https://github.com/Hsuchein/AutoNACC/blob/main/docs/tutorial.md"

[project.scripts]
autoprep = "autoprep.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
autoprep = ["template/*.xyz"]
